@@ -4,3 +4,4 @@ MANIFEST
 Makefile.PL
 README
 test.pl
+META.yml                                 Module meta-data (added by MakeMaker)
