@@ -1,0 +1,10 @@
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         ANSIColor
+version:      1.08
+version_from: ANSIColor.pm
+installdirs:  perl
+requires:
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.17
